--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/jatihusen/Basic-Java-Maven</url>
+      <url>https://maven.pkg.github.com/RafiRidel123/RafiAthaRidel_1302204110_Tugas13
+</url>
     </repository>
   </distributionManagement>
   
